FIX add z-index on css arrow

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 img{
     width: 100%;
-    aspect-ratio: 5/3;
+    aspect-ratio: 16/9;
+    object-fit: cover;
+	object-position: center;
 }
 
 .picture {
@@ -25,6 +27,7 @@ img{
     top: 50%;
     transform: translatey(-50%);
     color: white;
+    z-index: 20;
 }
 
 #arrow-right {
@@ -32,6 +35,7 @@ img{
     top: 50%;
     transform: translatey(-50%);
     color: white;
+    z-index: 20;
 }
 
 .title-img {
